--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
                         <h3 class="mb-0">Estagiário</h3>
                         <div class="subheading mb-3">SIDI - Samsung Intituto de Desenvolvimento para a Informática</div>
                         <p>Participação em projetos de software para smartphones e tablets Android; Customização de SW para
-                            introdução de novos modelos na América Latina;</p>
+                            introdução de novos modelos na América Latina; Checklists de requisitos realizadas em laboratório;
+                            Criação de tool para auxiliar trabalho da equipe.</p>
                     </div>
                     <div class="resume-date text-md-right">
                         <span class="text-primary">Janeiro de 2017 - Presente</span>
@@ -133,7 +134,7 @@
                     <div class="resume-content mr-auto">
                         <h3 class="mb-0">Suporte de TI</h3>
                         <div class="subheading mb-3">Softex - Associação para Promoção da Excelência do Software Brasileiro</div>
-                        <p>Suporte interno, noções em manutenção de sites, serviços de email, e servidores.</p>
+                        <p>Suporte interno, noções em manutenção de sites (Wordpress), serviços de email e servidores.</p>
                     </div>
                     <div class="resume-date text-md-right">
                         <span class="text-primary">Setembro de 2013 - Maio 2015</span>
@@ -144,7 +145,7 @@
                     <div class="resume-content mr-auto">
                         <h3 class="mb-0">Bolsista</h3>
                         <div class="subheading mb-3">Embrapa Informática Agropecuária</div>
-                        <p>Desenvolvimento de um sistema semi automático para detecção de doenças em folhas. Tecnologia: Python,
+                        <p>Desenvolvimento de um sistema semi-automático para detecção de doenças em folhas. Tecnologia: Python,
                             OpenCV.
                         </p>
                     </div>
@@ -343,6 +344,7 @@
             </div>
         </section>
 
+        <!-- Footer -->
         <footer class="bd-footer text-muted">
             <div class="container-fluid p-1 p-md-3">
                 <center>
