--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p> -->
                 <ul class="list-inline list-social-icons mb-0">
                     <li class="list-inline-item">
-                        <a href="https://www.facebook.com/birohp">
+                        <a href="https://www.facebook.com/birohp" target="_blank">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
@@ -85,7 +85,7 @@
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://twitter.com/birohp">
+                        <a href="https://twitter.com/birohp" target="_blank">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
@@ -93,7 +93,7 @@
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://www.linkedin.com/in/tarcisio-fernandes-338b4816/">
+                        <a href="https://www.linkedin.com/in/tarcisio-fernandes-338b4816/" target="_blank">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -101,7 +101,7 @@
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://github.com/birohp">
+                        <a href="https://github.com/birohp" target="_blank">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-github fa-stack-1x fa-inverse"></i>
