--- a/index.html
+++ b/index.html
@@ -53,12 +53,14 @@
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#habilidades">Habilidades</a>
                 </li>
+                <!--
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#video">Vídeo</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#contato">Contato</a>
                 </li>
+                -->
             </ul>
         </div>
     </nav>
@@ -293,8 +295,8 @@
             </div>
         </section>
 
-        <!--
-        <!-- Vídeo -->
+        
+        <!-- Vídeo --><!--
         <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="video">
             <div class="row">
                 <div class="col-2">
@@ -317,8 +319,8 @@
                 </div>
             </div>
         </section>
-
-        <!-- Contato -->
+        -->
+        <!-- Contato --><!-- 
         <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="contato">
             <div class="my-auto">
                 <h2 class="mb-5">Contato</h2>
