--- a/index.html
+++ b/index.html
@@ -114,6 +114,19 @@
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experiencia">
       <div class="my-auto">
         <h2 class="mb-5">Experiência</h2>
+        
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Analista de Sistemas em</h3>
+            <div class="subheading mb-3">Claro Brasil</div>
+            <p><strong>Responsabilidades: Desenvolvimento de softwares para uso interno (PHP, Perl, Javascript, MySQL, CSS), 
+              manutenção de bots no servidor que dão apoio a esteira de produção (instalação de internet empresarial).</p>
+            <p><strong>Realizações: Adquirindo experiência nas mais diversas tecnologias</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Setembro de 2019 - Momento</span>
+          </div>
+        </div>
 
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
@@ -122,7 +135,7 @@
             <p><strong>Responsabilidades:</strong> Participação em projetos de software fullstack nas mais
               diversas
               tecnologias presentes no mercado.</p>
-            <p><strong>Realizações:</strong> Experiência adquirida até o momento em GIT,
+            <p><strong>Realizações:</strong> Experiência adquirida em GIT,
               Linux(Ubuntu), Trello e JavaScript com seus diversos frameworks, como React, Redux e
               Node.js.</p>
           </div>
