--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Analista de Sistemas em</h3>
             <div class="subheading mb-3">Claro Brasil</div>
-            <p><strong>Responsabilidades: Desenvolvimento de softwares para uso interno (PHP, Perl, Javascript, MySQL, CSS), 
+            <p><strong>Responsabilidades:</strong> Desenvolvimento de softwares para uso interno (PHP, Perl, Javascript, MySQL, CSS), 
               manutenção de bots no servidor que dão apoio a esteira de produção (instalação de internet empresarial).</p>
-            <p><strong>Realizações: Adquirindo experiência nas mais diversas tecnologias</p>
+            <p><strong>Realizações:</strong> Adquirindo experiência nas mais diversas tecnologias</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Setembro de 2019 - Momento</span>
@@ -273,13 +273,12 @@
                 <ul>
                   <li>JavaScript</li>
                   <li>Java</li>
-                  <li>Pearl</li>
+                  <li>Perl</li>
                   <li>SASS</li>
                   <li>SQL</li>
                   <li>React.js</li>
                   <li>Node.js</li>
                   <li>Redux</li>
-                  <li>SQL</li>
                 </ul>
               </p>
             </div>
@@ -298,6 +297,9 @@
                   <li>C/C+</li>
                   <li>Testes</li>
                   <li>GIT</li>
+                  <li>PHP</li>
+                  
+                  <li>MySQL</li>
                 </ul>
               </p>
             </div>
