--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
           <a href="mailto:birohp@gmail.com">birohp@gmail.com</a>
         </div>
         <p class="mb-5">Aprendendo a todo momento. Curioso nas mais diversas tecnologias modernas, buscando
-          sempre conhecer um
-          pouco de cada, cada dia mais.
+          sempre conhecer um pouco de cada, cada dia mais. Ciclista fora de estrada nas horas vagas.
         </p>
         <ul class="list-inline list-social-icons mb-0">
           <li class="list-inline-item">
